--- a/bootstrap.html
+++ b/bootstrap.html
@@ -182,9 +182,9 @@
                 <img src="d5.png" class="col-md-5 col-md-offset-4 img-responsive img-thumbnail smallImg" alt="ico1">
                 <img src="Nikon-200-500mm-.jpg" class="col-md-5 img-responsive img-rounded smallImg" alt="ico4">
                 <img src="d500.png" class="col-md-5 img-responsive img-thumbnail smallImg" alt="ico2">
-                <img src="sigma_150_600mm.jpg" class="col-md-5 col-md-offset img-responsive img-rounded smallImg" alt="ico6">
+                <img src="sigma_150_600mm.jpg" class="col-md-5  img-responsive img-rounded smallImg" alt="ico6">
                 <img src="1dx.png" class="col-md-5 img-responsive img-thumbnail smallImg" alt="ico3">                
-                <img src="ef%20600.jpg" class="col-md-5 col-md-offset img-responsive img-rounded smallImg" alt="ico5">
+                <img src="ef%20600.jpg" class="col-md-5 img-responsive img-rounded smallImg" alt="ico5">
                 
            </p>
             <!-- http://www.w3schools.com/bootstrap/bootstrap_alerts.asp -->
