changed the carousel to have bigger picture, I think it looks better that way. You can change it back if you want.
Added the extra space to even out the columns

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -137,7 +137,8 @@
                 <li><strong>ISO Range (Expanded)</strong>: 100–16,000 (25,600)</li>
                 <li><strong>Price</strong>: $1,199</li>
             </ul>
-            <p>j</p>
+        <!--http://stackoverflow.com/questions/24467036/make-a-half-row-break-br on 9/20/2016-->
+        <hr class="customPadding" />
 
         </section>
         <section class="transp col-md-5 panel">
@@ -178,7 +179,7 @@
             
         </section>
         <section id="examples" class="transp col-md-10 col-md-offset-1 panel">
-        <h2>This are some examples of photos taken with these equipment.</h2>
+           <h2>This are some examples of photos taken with these equipment.</h2>
            <p class="row">
                 <img src="d5.png" class="col-md-5 col-md-offset-4 img-responsive img-thumbnail smallImg" alt="ico1">
                 <img src="Nikon-200-500mm-.jpg" class="col-md-5 img-responsive img-rounded smallImg" alt="ico4">
