--- a/bootstrap.html
+++ b/bootstrap.html
@@ -19,7 +19,7 @@
     <!-- http://getbootstrap.com/components/#jumbotron -->
     <header class="headBack jumbotron">
     <h1>JD's Wild Photography</h1>
-    <p>Welcome to JD's Wild Photography website where we showcase some of the best cameras and lens for taking picture of living and vibrant nature.</p>
+    <p><strong>Welcome to JD's Wild Photography where we showcase some of the best cameras and lenses for taking pictures wildlife.</strong></p>
     </header>
     
     <!--http://www.w3schools.com/bootstrap/bootstrap_navbar.asp on 9/19/2016 -->
@@ -59,9 +59,9 @@
     <!-- Information taken from: http://www.outdoorphotographer.com/photography-gear/lenses/lenses-wildlife-photography/ and
                             http://www.outdoorphotographer.com/photography-gear/cameras/top-dslrs-for-wildlife/ on 9/20/2016 -->
     <main class="row">
-        <div class="transp col-md-10 col-md-offset-1">
-            <section class="row">
-                <article class="col-md-5">
+        <div class="transp col-md-10 col-md-offset-1 panel">
+            <div class="row">
+                <section class="col-md-5">
                     <h2>Best cameras for Wildlife Photography.</h2>
                     <p>Following is a selection of the best and newest DSLRs, both full-frame and APS-C, which we recommend for wildlife photography.These cameras represent the latest options from the two most prominent camera makers.</p>
                     <h3 id="1dx">Canon EOS-1D X Mark II</h3>
@@ -139,9 +139,8 @@
                         <li><strong>ISO Range (Expanded)</strong>: 100–16,000 (25,600)</li>
                         <li><strong>Price</strong>: $1,199</li>
                     </ul>
-
-                </article>
-                <article class="col-md-5 col-md-offset-1">
+                </section>
+                <section class="col-md-5 col-md-offset-1">
                     <h2>Best lenses for Wildlife Photography.</h2>
                     <p>
                         When it comes to selecting lenses for wildlife photography, the first thing most photographers look for is focal length. Vibration reduction makes lenses more easily handholdable and a large maximum aperture, such as ƒ/2.8, is also helpful for shooting in low light and at fast shutter speeds. Following is a selection of the best lenses you can choose.
@@ -177,8 +176,8 @@
                         <br>A great value for full-frame Canon, Nikon and Sony shooters, the Tamron SP 150-600mm Di VC USD super-telephoto zoom provides a versatile range at an accessible price. Vibration compensation helps steady shots when working at the long end of the focal range, and the variable maximum aperture helps to keep the lens compact—at least by 600mm telephoto standards—and to keep the cost down, too. The estimated retail price is $1,100.
                     </p>
 
-                </article>
-                <article id="examples" class="col-md-12">
+                </section>
+                <section id="examples" class="col-md-12">
                    <h2>This are some examples of photos taken with these equipment.</h2>
                    <p class="row">
                         <img src="pictures/d5.png" class="col-md-5 col-md-offset-4 img-responsive img-thumbnail smallImg" alt="ico1">
@@ -232,8 +231,8 @@
                           <span class="sr-only">Next</span>
                         </a>
                   </div>
-                </article>
-            </section>
+                </section>
+            </div>
         </div>
     </main>
 
