--- a/bootstrap.html
+++ b/bootstrap.html
@@ -19,7 +19,7 @@
     <!-- http://getbootstrap.com/components/#jumbotron -->
     <header class="headBack jumbotron">
     <h1>JD's Wild Photography</h1>
-    <p><strong>Welcome to JD's Wild Photography where we showcase some of the best cameras and lenses for taking pictures wildlife.</strong></p>
+    <p><strong>Welcome to JD's Wild Photography where we showcase some of the best cameras and lenses for taking pictures of wildlife.</strong></p>
     </header>
     
     <!--http://www.w3schools.com/bootstrap/bootstrap_navbar.asp on 9/19/2016 -->
