Added two glyphicons incase the ones from the carousel don't count

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -52,7 +52,7 @@
                 <li><a href="#tamron150-600">Tamron SP 150-600mm Di VC USD</a></li>
               </ul>
             </li>
-            <li><a href="#examples">Photo Examples</a></li>
+            <li><a href="#examples">Photo Examples <span class="glyphicon glyphicon-camera"/></a></li>
           </ul>
         </div>
     </nav>
@@ -190,7 +190,7 @@
                    </p>
                     <!-- http://www.w3schools.com/bootstrap/bootstrap_alerts.asp 9/19/2016-->
                     <p id ="alert" class="alert alert-offset-4 alert-info" role="alert">
-                        <strong>Info!</strong> These photos do not belong to me. They were shared by other Flickr members.
+                        <span class="glyphicon glyphicon-exclamation-sign"></span> These photos do not belong to me. They were shared by other Flickr members.
                     </p>
                     <!-- http://www.w3schools.com/bootstrap/bootstrap_carousel.asp 9/19/2016-->
                     <div id="myCarousel" class="carousel slide" data-ride="carousel">
