--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Group 15 members: Daniel Gomero & Jonathan Valencia -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,12 +12,12 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <title>JD's Camera & Lens</title>
+    <title>JD's Wild Photography</title>
     <link rel="stylesheet" href="bootstrap-style.css">
 </head>
 <body class="container-fluid">
 
-    <!-- http://getbootstrap.com/components/#jumbotron -->
+    <!-- http://getbootstrap.com/components/#jumbotron on 9/19/2016-->
     <header class="headBack jumbotron">
     <h1>JD's Wild Photography</h1>
     <p><strong>Welcome to JD's Wild Photography where we showcase some of the best cameras and lenses for taking pictures of wildlife.</strong></p>
@@ -52,7 +53,7 @@
                 <li><a href="#tamron150-600">Tamron SP 150-600mm Di VC USD</a></li>
               </ul>
             </li>
-            <li><a href="#examples">Photo Examples <span class="glyphicon glyphicon-camera"/></a></li>
+            <li><a href="#examples">Photo Examples <span class="glyphicon glyphicon-camera"></span></a></li>
           </ul>
         </div>
     </nav>
@@ -188,11 +189,11 @@
                         <img src="pictures/ef%20600.jpg" class="col-md-5 img-responsive img-rounded smallImg" alt="ico5">
 
                    </p>
-                    <!-- http://www.w3schools.com/bootstrap/bootstrap_alerts.asp 9/19/2016-->
+                    <!-- http://www.w3schools.com/bootstrap/bootstrap_alerts.asp on 9/19/2016-->
                     <p id ="alert" class="alert alert-offset-4 alert-info" role="alert">
                         <span class="glyphicon glyphicon-exclamation-sign"></span> These photos do not belong to me. They were shared by other Flickr members.
                     </p>
-                    <!-- http://www.w3schools.com/bootstrap/bootstrap_carousel.asp 9/19/2016-->
+                    <!-- http://www.w3schools.com/bootstrap/bootstrap_carousel.asp on 9/19/2016-->
                     <div id="myCarousel" class="carousel slide" data-ride="carousel">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
